# cmake-templates

./: README.md
mylib/: CMakeLists.txt  CMakePresets.json
mylib/cmake/: mylib-config.cmake.in
mylib/examples/: CMakeLists.txt  hello_world_example.cpp
mylib/include/mylib/: hello_world.h
mylib/src/: hello_world.cpp
mylib/tests/: CMakeLists.txt  hello_world_test.cpp
